# mcp-windbg

./: README.md  pyproject.toml
.github/: copilot-instructions.md
examples/: build.ps1  complex-struct-nullptr.cpp  divide-by-zero.cpp  heap-buffer-overflow.cpp  invalid-free.cpp  nullptr-dereference.cpp
src/mcp_server_windbg/: __init__.py  __main__.py  cdb_session.py  server.py  windbg_session.py
src/mcp_server_windbg/tests/: test_cdb.py  test_remote_debugging.py  test_server.py  test_windbg.py
src/mcp_server_windbg/tests/dumps/: DemoCrash1.exe.7088.dmp
src/mcp_server_windbg/utils/: windbg_mcp_plugin.js
