[project]
name = "mcp-server-windbg"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to analyze Windows crash dumps using WinDBG/CDB"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "svnscha" }]
keywords = ["windbg", "cdb", "mcp", "llm", "crash-analysis"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-windbg = "mcp_server_windbg:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["src/mcp_server_windbg/tests"]

[project.optional-dependencies]
test = ["pytest>=7.0.0",
        "psutil>=7.0.0"
]